<resources>
    <string name="app_name">PersonManager</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Our memories</string>
    <string name="second_fragment_label">Edit memory</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="date">Date</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="commit">Commit</string>
    <string name="please_insert_value">Please insert value</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pet_name">Pet\'s name</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="exit">Exit</string>
    <string name="exit_app_question">Do you really want to exit?</string>
    <string name="about">About</string>
    <string name="third_fragment_label">About application</string>
</resources>