<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/paddingEdit">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ivEditHeight"
            tools:src="@drawable/person_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopEdit">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="@dimen/textSizeEdit"
            android:text="@string/date"
            android:textColor="?colorPrimary"
            android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:textColor="@color/my_gray"
                android:textSize="@dimen/textSizeEdit"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                tools:text="yyyy-MM-dd" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopEdit">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="@dimen/textSizeEdit"
                android:text="@string/first_name"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                tools:text="Robert" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopEdit">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="@dimen/textSizeEdit"
                android:text="@string/last_name"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                tools:text="me Diro" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopEdit">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="@dimen/textSizeEdit"
                android:text="@string/pet_name"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPetName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                tools:text="kuki" />

        </LinearLayout>

        <Button
            android:id="@+id/btnCommit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/commit"
            android:backgroundTint="@color/my_gray"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
</ScrollView>